update paywall JS, remove old analytics, add data layer for analytics hub

--- a/root/src/partials/_head.html
+++ b/root/src/partials/_head.html
@@ -1,7 +1,7 @@
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width,initial-scale=1">
 
-<title><%= project.title %></title>
+<title><%= json.project.title %></title>
 
 <!-- Favicon -->
 <link rel="shortcut icon" href="https://apps-production.s3.amazonaws.com/static/images/favicon.ico" type="image/x-icon">
