--- a/root/src/partials/_comments.html
+++ b/root/src/partials/_comments.html
@@ -1,5 +1,26 @@
+<!-- comment block -->
+<script type="text/javascript">
+  window.SEATIMESCO = window.SEATIMESCO || {};
+  window.SEATIMESCO.comments = window.SEATIMESCO.comments || {};
+  window.SEATIMESCO.comments.enabled = 1;
+  window.SEATIMESCO.comments.postID = 'stp-12345678';
+  window.SEATIMESCO.comments.assetURL = 'https://projects-staging.seattletimes.com/international-fireball/';
+  window.SEATIMESCO.comments.ssoEnvironment = 'secure.';
+  window.SEATIMESCO.comments.coralURL = 'https://seattletimes.talk.coralproject.net/';
+  window.SEATIMESCO.singleSignOn = window.SEATIMESCO.singleSignOn || {};
+  window.SEATIMESCO.singleSignOn.info = window.SEATIMESCO.singleSignOn.info || {};
+  window.SEATIMESCO.singleSignOn.info.commenterSessionURL = 'https://secure.seattletimes.com/accountcenter/coraltoken.js?token=';
+</script>
 
-<!-- livefyre commenting block -->
-<div class="show-comments">View comments</div>
-<div id="livefyre-comments" data-article="<%= article %>"></div>
-<!-- end livefyre commenting block -->
+<a id="comments" class="article-comments-bar" href="#comments">
+  <i class="icon-chat"></i> View <span class="comment-count talk_comment_count">Comments</span>
+</a>
+<div class="comments-container">
+  <div class="u-tc mb-4 mt-2 u-sans hide">You must be logged in to leave a comment. <a href="https://secure.seattletimes.com/accountcenter" class="coral-login-link">Log in</a> or <a href="https://secure.seattletimes.com/accountcenter/register" class="coral-create-account-link">create an account</a>.</div>
+  <div id="coral_talk_stream"></div>
+  <p class="u-sans font-small mb-5">The opinions expressed in reader comments are those of the author only, and do not reflect the opinions of The Seattle Times.</p>
+</div>
+<script type="text/javascript" src="https://talk-seattletimes.global.ssl.fastly.net/static/embed/count.js?id=stp-12141226"></script>
+<script type="text/javascript" src="https://talk-seattletimes.global.ssl.fastly.net/static/embed.js"></script>
+<script type="text/javascript" src="https://www.seattletimes.com/wp-content/plugins/st-coral-talk/dist/st-coraltalk-bundle.js"></script>
+<!-- end comment block -->
