add credits partial

--- a/root/src/css/seattletimes.less
+++ b/root/src/css/seattletimes.less
@@ -308,6 +308,26 @@ nav.main-nav {
   }
 }
 
+.credits {
+  padding-top: 10px;
+  max-width: 900px;
+  margin: 10px auto;
+  @media @desktop-up {
+    display: flex;
+    flex-wrap: wrap;
+    margin-bottom: 35px;
+  }
+}
+
+.credit {
+  flex-basis: 50%;
+  font-family: @df-sans;
+  font-size: 17px;
+  line-height: 1.2;
+  margin: 3px 0;
+  padding: 0 10px;
+}
+
 footer.nav-bottom {
   background: black;
   opacity: 0.95;
