--- a/root/src/partials/_dontMiss.html
+++ b/root/src/partials/_dontMiss.html
@@ -1,5 +1,5 @@
 <section class="thin-div">
-  <div class="center">Don't Miss</div>
+  <div class="center">Don’t Miss</div>
 </section>
 
 <section class="dont-miss">
