left align graphic credits on small screens

--- a/root/src/css/seattletimes.less
+++ b/root/src/css/seattletimes.less
@@ -124,10 +124,14 @@ h4 {
 }
 .data-source {
   font-style: italic;
-  float: left;
+  @media @tablet-up {
+    float: left;
+  }
 }
 .art-credit {
-  float: right;
+  @media @tablet-up {
+    float: right;
+  }
 }
 
 //header and menu
