comments, ad code & analytics updated

--- a/root/src/css/values.less
+++ b/root/src/css/values.less
@@ -4,6 +4,8 @@
 @tablet-up: ~"(min-width: 480px)";
 @desktop-up: ~"(min-width: 768px)";
 
+@darkMode: ~"(prefers-color-scheme: dark)";
+
 // Neutral colors
 @df-off-black: rgb(35, 31, 32);
 @df-off-white: rgb(248, 248, 248);
