--- a/root/src/partials/_comments.html
+++ b/root/src/partials/_comments.html
@@ -1,10 +1,10 @@
- <!-- comment block -->
+<!-- comment block -->
 <script type="text/javascript">
  window.SEATIMESCO = window.SEATIMESCO || {};
  window.SEATIMESCO.comments = window.SEATIMESCO.comments || {};
  window.SEATIMESCO.comments.enabled = 1;
- window.SEATIMESCO.comments.postID = 'stp-13625054';
- window.SEATIMESCO.comments.assetURL = 'https://projects.seattletimes.com/2021/collective-longing-after-covid-19-pandemic-seattle-washington';
+ window.SEATIMESCO.comments.postID = 'stp-<%= json.project.post_id %>';
+ window.SEATIMESCO.comments.assetURL = '<%= json.project.url %>';
  window.SEATIMESCO.comments.ssoEnvironment = 'secure.';
  window.SEATIMESCO.comments.coralURL = 'https://seattletimes.coral.coralproject.net/';
  window.SEATIMESCO.singleSignOn = window.SEATIMESCO.singleSignOn || {};
@@ -12,7 +12,7 @@
  window.SEATIMESCO.singleSignOn.info.commenterSessionURL = 'https://secure.seattletimes.com/accountcenter/coraltoken.js?token=';
 </script>
 <a id="comments" class="article-comments-bar" href="#comments">
-             <i class="icon-chat"></i> View <span class="coral-count comment-count talk_comment_count" data-coral-id="stp-13625054">Comments</span>
+             <i class="icon-chat"></i> View <span class="coral-count comment-count talk_comment_count" data-coral-id="stp-<%= json.project.post_id %>">Comments</span>
            </a><div class="comments-container">
    <div class="u-tc mb-4 mt-2 u-sans hide">Posting comments is now limited to subscribers only. <a href="https://www.seattletimes.com/subscribe/signup-offers/?subsource=commenting" class="coral-subscribe-link">View subscription offers here</a>. For more information, visit our <a href="https://www.seattletimes.com/help/#commenting-on-articles-on-seattletimes-com" target="_blank">FAQ's</a>.</div>
    <div id="coral_talk_stream"></div>
