--- a/root/src/partials/_head.html
+++ b/root/src/partials/_head.html
@@ -1,5 +1,6 @@
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width,initial-scale=1">
+<meta name="description" content="<%= project.description %>">
 
 <title><%= project.title %></title>
 
