alt tag to ST logo in footer

--- a/root/src/partials/_navBottom.html
+++ b/root/src/partials/_navBottom.html
@@ -1,5 +1,5 @@
 <footer class="nav-bottom">
   <a class="logo" href="https://www.seattletimes.com">
-    <img src="./assets/st-logo.png" alt="">
+    <img src="./assets/st-logo.png" alt="Seattle Times Logo">
   </a>
 </footer>
