middle gray darker, link text in nav bar

--- a/root/src/partials/_nav.html
+++ b/root/src/partials/_nav.html
@@ -8,13 +8,16 @@
 	    <div class="share-bar">
 			<a href="https://www.facebook.com/dialog/share?app_id=2618768518177469&display=popup&href=<%= json.project.url %>?utm_source=facebook%26utm_medium=social%26utm_campaign=projects_article" rel="noopener" target="_blank">
 				<svg class="share-icon" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><rect width="24" height="24" rx="3" ry="3" class="changes-color" fill="silver"/><path d="M21,12.05A9,9,0,1,0,10.59,21v-6.3H8.31V12.05h2.28v-2A3.18,3.18,0,0,1,14,6.56a13.55,13.55,0,0,1,2,.18V9H14.87a1.3,1.3,0,0,0-1.46,1.41v1.69H15.9l-.4,2.61H13.41V21A9,9,0,0,0,21,12.05" fill="#fff"/></svg>
-			</a>
+        Share this story on Facebook
+      </a>
 			<a href="mailto:?subject=<%= json.project.title %>&amp;body=<%= json.project.description %>%20<%= json.project.url %>?utm_source=email%26utm_medium=email%26utm_campaign=projects_article">
 				<svg class="share-icon" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><rect width="24" height="24" rx="3" ry="3" class="changes-color" fill="silver"/><path d="M20.27,7.15l-5.93,5,5.29,4.07a.48.48,0,0,1,.09.67.5.5,0,0,1-.38.19.45.45,0,0,1-.29-.1l-5.45-4.2L12.07,14.1h-.14L10.4,12.81,5,17a.45.45,0,0,1-.29.1.5.5,0,0,1-.38-.19.48.48,0,0,1,.09-.67l5.29-4.07-5.93-5a1.87,1.87,0,0,0-.31,1v7.62a1.9,1.9,0,0,0,1.91,1.91H18.67a1.9,1.9,0,0,0,1.91-1.91V8.19A1.87,1.87,0,0,0,20.27,7.15Z" fill="#fff"/><path d="M12,12.92,19.56,6.5a1.92,1.92,0,0,0-.89-.22H5.33a1.92,1.92,0,0,0-.89.22Z" fill="#fff"/></svg>
-			</a>
+        Share this story by email
+      </a>
 		    <a href="https://twitter.com/intent/tweet?text=<%= json.project.description %>%20<%= json.project.url %>?utm_source=twitter%26utm_medium=social%26utm_campaign=projects_article" class="share-link">
 		    	<svg class="share-icon" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><rect width="24" height="24" rx="3" ry="3" class="changes-color" fill="silver"/><path d="M21,6.42A7.47,7.47,0,0,1,18.88,7,3.68,3.68,0,0,0,20.5,5a7.07,7.07,0,0,1-2.34.9,3.7,3.7,0,0,0-6.39,2.53,3.33,3.33,0,0,0,.1.84A10.5,10.5,0,0,1,4.25,5.36a3.77,3.77,0,0,0-.5,1.86A3.69,3.69,0,0,0,5.4,10.29a3.67,3.67,0,0,1-1.68-.46v.05a3.7,3.7,0,0,0,3,3.62,3.93,3.93,0,0,1-1,.13A3.94,3.94,0,0,1,5,13.56a3.69,3.69,0,0,0,3.45,2.57,7.44,7.44,0,0,1-4.59,1.58A8.49,8.49,0,0,1,3,17.66,10.52,10.52,0,0,0,19.17,8.81c0-.16,0-.32,0-.48A7.6,7.6,0,0,0,21,6.42Z" fill="#fff"/></svg>
-		    </a>
+          Tweet this story
+        </a>
 		</div>
 		<% } %>
  	</div>
